# mj-lstm

./: Cargo.toml  NOTICE  README.md
hs/: Main.hs
hs2/: Main.hs
src/: adamw.rs  gradient.rs  gru.rs  indrnn.rs  lib.rs  lstm.rs  lstm_v2.rs  meta_lstm.rs  nematode.rs  rnn.rs  simd.rs  simd_aarch64.rs  simd_all.rs  simd_amd64.rs  simd_common.rs  simd_tests.rs  simple.rs  stop_condition.rs  unpackable.rs
src/benches/: benchmark.rs  flops_benchmark.rs
toys/: meta_learning_experiment.rs
