[package]
name = "mj-lstm"
version = "0.1.0"
authors = ["Mikko Juola <mikjuo@gmail.com>"]
edition = "2018"

[dependencies]
rcmaes = { git = "https://github.com/Noeda/rcmaes", rev = "2eca85e6d8caf4d74c2c8bf99f37cb98b6f8db58" }
mj-autograd = { git = "https://github.com/Noeda/mj-autograd" , rev = "896b28d97baa6763e08d4048132cdc18f490baa5" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.7"
rug = "1"
statrs = "0.15"

[dev-dependencies]
quickcheck = "0.9"
criterion = "0.3"
crossbeam = "0.8"
num_cpus = "1"

[profile.release]
opt-level = 3
overflow-checks = false
lto = true

[[bench]]
path = "src/benches/benchmark.rs"
name = "benchmark"
harness = false

[[bench]]
path = "src/benches/flops_benchmark.rs"
name = "flops_benchmark"
harness = false
