[package]
name = "mj-lstm"
version = "0.1.0"
authors = ["Mikko Juola <mikjuo@gmail.com>"]
edition = "2018"

[dependencies]
rcmaes = { git = "https://github.com/Noeda/rcmaes", rev = "508e8693b659763dcd6cae523f095a945d2beca3" }
mj-autograd = { git = "https://github.com/Noeda/mj-autograd", rev = "50e25dc872550f794820906c36b50e732a06926e" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.7"
rug = "1"
statrs = "0.16"
num = "0.4"
rayon = "1.7"

[dev-dependencies]
quickcheck = "0.9"
criterion = "0.3"
crossbeam = "0.8"
num_cpus = "1"

[profile.release]
opt-level = 3
overflow-checks = false
lto = true

[[bin]]
name = "meta-lstm"
path = "toys/meta_learning_experiment.rs"
test = false
bench = false
required-features = ["toys"]

[features]
toys = []

[[bench]]
path = "src/benches/benchmark.rs"
name = "benchmark"
harness = false

[[bench]]
path = "src/benches/flops_benchmark.rs"
name = "flops_benchmark"
harness = false
